rhoai-3_4/base/instances/maas-controller/policies/tokenrate.yaml
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: maas-api-backend-tls
  namespace: openshift-ingress
spec:
  host: maas-api.redhat-ods-applications.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 8443
      tls:
        insecureSkipVerify: true
        mode: SIMPLE
---
